# PoseSearch

./: .neocmakelint.toml  CMakeLists.txt  README.md  db_table_def.sql  id.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_file.cpp  my_application.cpp  my_application.hpp  my_settings.hpp  my_thumbnail.cpp  poseinfo.hpp  table_def.sql
Param/: base.cpp  base.h  directionparam2d.cpp  directionparam2d.h  directionparam3d.cpp  directionparam3d.h  directionparam_2d.ui  directionparam_3d.ui  directionparam_pitch.cpp  directionparam_pitch.h  directionparam_yaw.cpp  directionparam_yaw.h  float_param.ui  float_slider_param.cpp  float_slider_param.h  float_slider_param.ui  floatparam.cpp  floatparam.h  paramwrapper.h  paramwrapper.ui  querydialog.cpp  querydialog.h  querydialog.ui  spin_intparam.cpp  spin_intparam.h  spin_intparam.ui  tag_param.cpp  tag_param.h  tag_param.ui  text_param.cpp  text_param.h  text_param.ui
aux_f/: angle.hpp  convert.hpp  debug.hpp  exception.cpp  exception.hpp  q_value.hpp  value.hpp
aux_f/sql/: database.cpp  database.hpp  exception.cpp  exception.hpp  getvalue.hpp  getvalues.hpp  name.hpp  query.hpp  value.hpp
aux_f_q/: convert.hpp  image.cpp  image.hpp  math.cpp  math.hpp  q_value.cpp  q_value.hpp
aux_f_q/sql/: database.cpp  database.hpp  error.cpp  exception.cpp  exception.hpp  getid_record.hpp  gettuple.hpp  getvalue.hpp  insert.cpp  insert.hpp  query.cpp  query.hpp  transaction.hpp
cereal_types/: qstring.hpp  qvector.hpp
condition/: cond_bodydir.cpp  cond_bodydir_pitch.cpp  cond_bodydir_yaw.cpp  cond_crus_flexion.cpp  cond_tag.cpp  cond_thigh_flexion.cpp  condition.cpp  condition.hpp
singleton/: my_db.cpp  my_db.hpp  my_settings.cpp  my_thumbnail.cpp  my_thumbnail.hpp  singleton.hpp
tests/: CMakeLists.txt  test_angle.cpp  test_value.cpp
widget/: cond_data.hpp  condition.hpp  conditionlist_dlg.cpp  conditionlist_dlg.hpp  conditionlistmodel.cpp  conditionlistmodel.hpp  conditionlistview.cpp  conditionlistview.hpp  conditionmodel.cpp  conditionmodel.hpp  conditionview.cpp  conditionview.hpp  directionarc.cpp  directionarc.hpp  directioncircle.cpp  directioncircle.hpp  imageview.cpp  imageview.h  landmark_index.hpp  poseinfodialog.cpp  poseinfodialog.h  poseinfodialog.ui  resultpathmodel.cpp  resultpathmodel.h  resultview.cpp  resultview.h  static_base.hpp
widget/condition/: cond_bodydir.cpp  cond_tag.cpp
